--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,17 @@ input[type="file"].classer::file-selector-button {
   margin-top: 0px;
   font-size: 12px;
 }
+
+input[type="file"].excel::file-selector-button {
+  background-color: #21A366  ;
+  color: #fbfbfb;
+  padding: 6px 10px;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  margin-top: 12px;
+  margin-right: 16px
+}
 input[type="file"].fotos::file-selector-button {
   background-color: #0F172A;
   color: #fbfbfb;
@@ -35,6 +46,7 @@ input[type="file"].fotos::file-selector-button {
   font-size: 16px;
   font-weight: 600;
 }
+
 :hover[type="file"]::file-selector-button {
   background-color: #64748B;
   transition: 500ms;
@@ -48,7 +60,10 @@ input[type="file"].fotos::file-selector-button {
 :hover[type="file"].classer::file-selector-button {
   background-color: #64748B;
   transition: 500ms;
-  
+}
+:hover[type="file"].excel::file-selector-button {
+  background-color: #64748B;
+  transition: 500ms;
 }
 
 input[type="file"].classer {
