--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,3 +82,23 @@ input[type="file"].fotos {
 .percentProgress {
   color:red
 }
+
+@keyframes ring {
+  0% { transform: rotate(0deg); }
+  10% { transform: rotate(15deg); }
+  20% { transform: rotate(-15deg); }
+  30% { transform: rotate(10deg); }
+  40% { transform: rotate(-10deg); }
+  50% { transform: rotate(5deg); }
+  60% { transform: rotate(-5deg); }
+  70% { transform: rotate(2deg); }
+  80% { transform: rotate(-2deg); }
+  90% { transform: rotate(1deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.ringing {
+  animation: ring 1.5s ease-in-out infinite;
+  animation-delay: 1s; /* Adiciona um intervalo de 2 segundos */
+
+}
